fixed timeline spacing

--- a/sidebar.css
+++ b/sidebar.css
@@ -226,29 +226,44 @@ footer .links a:hover {
 }
 
 
-:root{ --main-color: #0883FF; }
-.main-timeline{ font-family: 'Poppins', sans-serif; }
-.main-timeline:after{
+:root {
+    --main-color: #0883FF;
+}
+
+.main-timeline {
+    font-family: 'Poppins', sans-serif;
+}
+
+.main-timeline:after {
     content: '';
     display: block;
     clear: both;
 }
-.main-timeline .timeline{
+
+.main-timeline .timeline {
     width: 50%;
     padding: 60px 0 0 0;
     margin: 0 5px 25px 0;
     float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
-.main-timeline .timeline-content{
-    min-height: 100px;
+
+.main-timeline .timeline-content {
     padding: 0 15px 0 0;
     border-right: 2px solid var(--main-color);
     display: block;
     position: relative;
+    flex-grow: 1;
 }
-.main-timeline .timeline-content:hover{ text-decoration: none; }
+
+.main-timeline .timeline-content:hover {
+    text-decoration: none;
+}
+
 .main-timeline .timeline-content:before,
-.main-timeline .timeline-content:after{
+.main-timeline .timeline-content:after {
     content: '';
     background-color: var(--main-color);
     height: 6px;
@@ -258,11 +273,13 @@ footer .links a:hover {
     right: -4px;
     top: 0;
 }
-.main-timeline .timeline-content:after{
+
+.main-timeline .timeline-content:after {
     top: auto;
     bottom: 0;
 }
-.main-timeline .timeline-year{
+
+.main-timeline .timeline-year {
     color: #fff;
     background-color: var(--main-color);
     font-size: 25px;
@@ -275,7 +292,8 @@ footer .links a:hover {
     z-index: 1;
     clip-path: polygon(15% 0, 100% 0, 100% 100%, 15% 100%, 0 50%);
 }
-.main-timeline .title{
+
+.main-timeline .title {
     color: var(--main-color);
     font-size: 20px;
     font-weight: 700;
@@ -283,7 +301,7 @@ footer .links a:hover {
     margin: 0 0 7px;
 }
 
-.main-timeline .title1{
+.main-timeline .title1 {
     color: var(--main-color);
     font-size: 20px;
     font-weight: 700;
@@ -292,7 +310,7 @@ footer .links a:hover {
     text-align: right;
 }
 
-.main-timeline .description{
+.main-timeline .description {
     color: #555;
     font-size: 13px;
     font-weight: 500;
@@ -302,7 +320,7 @@ footer .links a:hover {
     margin: 0;
 }
 
-.main-timeline .description1{
+.main-timeline .description1 {
     color: #555;
     font-size: 13px;
     font-weight: 500;
@@ -312,33 +330,47 @@ footer .links a:hover {
     margin: 0;
 }
 
-.main-timeline .timeline:nth-child(even){
+.main-timeline .timeline:nth-child(even) {
     margin: 0 0 25px 5px;
     float: right;
 }
-.main-timeline .timeline:nth-child(even) .timeline-content{
+
+.main-timeline .timeline:nth-child(even) .timeline-content {
     text-align: left;
     padding: 0 0 0 15px;
     border-left: 2px solid var(--main-color);
     border-right: none;
 }
+
 .main-timeline .timeline:nth-child(even) .timeline-content:before,
-.main-timeline .timeline:nth-child(even) .timeline-content:after{
+.main-timeline .timeline:nth-child(even) .timeline-content:after {
     right: auto;
     left: -4px;
 }
-.main-timeline .timeline:nth-child(even) .timeline-year{
+
+.main-timeline .timeline:nth-child(even) .timeline-year {
     right: auto;
     left: -2px;
     clip-path: polygon(0 0, 85% 0, 100% 50%, 85% 100%, 0 100%);
 }
-.main-timeline .timeline:nth-child(2){ --main-color: #4e63d8; }
-.main-timeline .timeline:nth-child(3){ --main-color: #27038b; }
-.main-timeline .timeline:nth-child(4){ --main-color: #64b5f7; }
-@media screen and (max-width:767px){
+
+.main-timeline .timeline:nth-child(2) {
+    --main-color: #4e63d8;
+}
+
+.main-timeline .timeline:nth-child(3) {
+    --main-color: #27038b;
+}
+
+.main-timeline .timeline:nth-child(4) {
+    --main-color: #64b5f7;
+}
+
+@media screen and (max-width: 767px) {
     .main-timeline .timeline,
-    .main-timeline .timeline:nth-child(even){
+    .main-timeline .timeline:nth-child(even) {
         width: 100%;
         margin: 0 0 25px;
+        float: none;
     }
 }
